--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ p {
 }
 
 img {
-    padding: 0 10px;
+    padding:10px;
 }
 
 .content {
@@ -64,9 +64,10 @@ img {
     border-radius: 15px;
 }
 
-.com-buttons {
+#com-buttons {
     padding: 10px;
-    margin: 10px;
-    border-radius: 15px;
+    margin: 5px;
+    border-radius: 50%;
+    border: 5px solid red;
 }
 
