--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: roboto;
-    position: relative;;
+    position: relative;
 }
 
 header {
@@ -29,7 +29,6 @@ img {
 .content {
     display: flex;
     justify-content: space-around;
-    padding: 20px;
 }
 
 .score-board {
@@ -43,19 +42,19 @@ img {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    font-size: 4rem;
+    font-size: 4.8rem;
     border: 3px solid black;
     padding: 10px;
     margin: 5px;
     border-radius: 10px;
-    min-width: 120px;
+    min-width: 150px;
 }
 
 .button-board {
     flex-grow: 1;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    
 }
 
 .player-buttons {
@@ -76,7 +75,7 @@ img {
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-30%, -50%);
+    transform: translate(-50%, -50%);
     border: 5px solid black;
     border-radius: 15px;
     padding: 20px 80px;
